GetPayment endpoint
